# SelfRegisteringFactoryInC

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml  workflow.yml
deploy/: generate-vs2022-windows-arm64.bat  generate-vs2022-windows.bat
source/: main.c
source/lib/: Factory.c  Factory.h  FactoryRegistration.h  Module.h  Module1.c  Module2.c  Module3.c  ModuleConfigParamIDs.h
